# special-giggle

./: README.md  links_library.txt  pyproject.toml  requirements.txt
src/special_giggle/: eda.ipynb  img_preproc.ipynb  spectral_indices.ipynb  test.py  train.py  ts_fe.ipynb  utils.py
src/special_giggle/core/: README.md  alpha.py  comp_imgs.py  img_preproc.ipynb  schemas.py  ts_fe.ipynb  ts_fe.py
src/special_giggle/notebooks/: eda.ipynb  img_preproc.ipynb
