[project]
name = "special-giggle"
version = "0.1.0"
description = "Code for the 2024 Zindi Inundata: Mapping Floods in South Africa competition."
authors = [
    {name = "ng-23",email = "23grattan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "optuna (>=4.2.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "marshmallow (>=3.26.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
